# Firelink

./: .gitignore  CHANGELOG.md  Makefile  Package.swift  README.md  help.txt  process_icon.py  rick_astley.json  test_ytdlp.swift  tv_web.json  ytdlp_jsc.json  ytdlp_output.json
.github/workflows/: release.yml  tauri-build.yml
Resources/: AppIcon.icns
Scripts/: create_app_bundle.sh  fetch_media_engines.sh  fix_window.py  verify.sh
Sources/Firelink/: AddDownloadsView.swift  AppSettings.swift  AppUpdateChecker.swift  Aria2DownloadEngine.swift  BinaryDownloader.swift  ChunkMapView.swift  ContentView.swift  DownloadController.swift  DownloadMetadataFetcher.swift  DownloadPropertiesView.swift  DownloadTable.swift  FirelinkApp.swift  GatekeeperConfig.swift  LocalExtensionServer.swift  MediaDetector.swift  MediaDownloadEngine.swift  MediaEngineManager.swift  MediaExtractionEngine.swift  MediaInspectorCard.swift  MediaInspectorInlineView.swift  Models.swift  ProcessTreeTerminator.swift  SchedulerController.swift  SchedulerView.swift  SettingsView.swift  SidebarView.swift  SpeedLimiterView.swift  Theme.swift
apps/desktop/: package.json  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/_internal/: libssl.3.dylib
apps/desktop/src-tauri/binaries/_internal/curl_cffi-0.15.0.dist-info/: RECORD  WHEEL  direct_url.json
apps/desktop/src-tauri/binaries/_internal/websockets-16.0.dist-info/: RECORD  direct_url.json
apps/desktop/src-tauri/binaries/aria2-libs/: libcares.2.dylib  libintl.8.dylib  libsqlite3.dylib  libssh2.1.dylib  libssl.3.dylib
apps/desktop/src-tauri/src/: db.rs  extension_server.rs  fetch_test.rs  lib.rs  parity.rs  scheduler.rs
(+26 files in other folders)
